--- a/chelsea-night/index.html
+++ b/chelsea-night/index.html
@@ -540,7 +540,7 @@
         <div class="sec-time">8 : 00 pm</div>
         <div class="sec-name">Purple Rose Theatre</div>
         <div class="sec-type">College Night · "The Classic King"</div>
-        <p class="sec-desc">College night at the Purple Rose! Discounted tickets for a sold out show we had no right to
+        <p class="sec-desc">College night at the Purple Rose! Discounted tickets for a sold out show we have no right to
           attend&mdash;about mechanics in Detroit, directed by Jeff Daniels&mdash;and afterwards an unstructured
           talkback with the cast over complimentary pizzas. Will Jeff be there?</p>
         <span class="sec-aside">Please come prepared with questions for the cast and Mr. Jeff.</span>
